# test-set-training

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  TsT.py  TsT_cvb.py  TsT_noleak.py  TsT_vsi.py  debias_vsi.py  debias_vsi_clean.py  pyproject.toml  requirements.txt
.claude/: settings.json
.cursor/rules/: uv-env.mdc
data/: mmmu_sharegpt.jsonl  mmmu_sharegpt_test_20.jsonl  mmmu_sharegpt_train_80.jsonl  removed_ids.txt
dev/dataenvgym/: 2025-07-24-command-messageinit-is-analyzing-your-codebase.txt  CLAUDE.md
docs/: draft.tex  llm-v1-chat.txt  llm_system_summary.md  llm_tst_task.md  phase2_summary.md
docs/tasks/: README.md  implementation-roadmap.md  phase-1-minimal-refactor.md  phase-2-llm-system.md  phase-3-unified-evaluation.md  phase-4-benchmark-integration.md
examples/: llm_system_example.py  phase2_llm_example.py
notebooks/: 2025_05_21_VSI_TsT_abs_dist.ipynb  2025_05_21_VSI_TsT_app_ord.ipynb  2025_05_21_VSI_TsT_obj_ct.ipynb  2025_05_21_VSI_TsT_rel_dist.ipynb  2025_05_21_VSI_TsT_rel_dist_NO_LEAK.ipynb  2025_08_18_llm_evaluator.ipynb  2025_09_01_collect_sweep.ipynb  2025_09_01_obj_size.ipynb  2025_09_22_confidence_intervals.ipynb  mmmu.ipynb  to_sharegpt.ipynb  video-mme.ipynb  video-mme_feats.ipynb  vsi_debias__combined copy.ipynb  vsi_debias__combined.ipynb  vsi_debias_rel_dist.ipynb  vsi_debias_room_size.ipynb  vsi_debias_route_plan.ipynb
scripts/: README.md  TsT_cvb.py  TsT_vsi.py  bootstrap.sh  gemma2_2b_mmmu_sweep.py  llava_ov_0.5b_single_run.py  qwen2.5_7b_cvb.py  qwen2.5_7b_multi_benchmark_sweep.py  qwen2.5_7b_multi_benchmark_sweep_v3.py  qwen2.5_7b_single_run.py  qwen2.5_7b_sweep.py  qwen2.5_7b_video_mme.py  qwen2_7b_single_run.py  qwen2_7b_sweep.py  qwen3_8b_single_run.py  run_benchmark.py  run_tst.py  test_llm_single_run.py  test_llm_sweep.py
site/: 404.html  README.md  bibliography.bib  index.html
site/static/css/: fontawesome.all.min.css  style.css
src/TsT/: __init__.py  __main__.py  evaluation.py  llm_utils.py  protocols.py  utils.py
src/TsT/benchmarks/: __init__.py
src/TsT/benchmarks/cvb/: __init__.py  benchmark.py  data_loader.py  models.py
src/TsT/benchmarks/mmmu/: __init__.py  (+4 more)
src/TsT/core/: __init__.py  benchmark.py  cross_validation.py  evaluators.py  llm_evaluators.py  protocols.py  qa_models.py  results.py
src/TsT/evaluators/: llm.py  rf.py
src/TsT/experiments/: __init__.py  llm_single_run.py  llm_sweep.py  utils.py
src/TsT/llm/: __init__.py
tests/: __init__.py  conftest.py  test_clean_benchmark_system_integration.py  test_evaluation_integration.py  test_llm_system.py  test_phase2_integration.py  test_utils.py
tests/benchmarks/: __init__.py  test_all_benchmarks_integration.py  test_cvb_integration.py
tests/core/: __init__.py  test_benchmark_system.py  test_cross_validation.py  test_evaluators.py  test_protocols.py  test_qa_protocols.py  test_results.py  test_unified_cross_validator.py  test_unified_evaluators.py
(+31 files in other folders)
