[project]
name = "vsibench-debiased-internal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "notebook>=7.4.3",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "text2digits>=0.1.0",
    "tqdm>=4.67.1",
]
