[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "test-set-training"
version = "0.1.0"
description = "Code for NeurIPS 2025 Position Paper: Benchmark Designers Should ``Train on the Test Set'' to Expose Exploitable Non-Visual Shortcuts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "notebook>=7.4.3",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "text2digits>=0.1.0",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "hf-transfer>=0.1.9",
    "huggingface-hub[hf-xet]>=0.33.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.uv.build-backend]
module-root = "src"
module-name = "TsT"
