[project]
name = "test-set-training"
version = "0.1.0"
description = "Code for NeurIPS 2025 Position Paper: Benchmark Designers Should ``Train on the Test Set'' to Expose Exploitable Non-Visual Shortcuts"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "datasets>=3.6.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "llamafactory[bitsandbytes,deepspeed,liger-kernel,metrics,torch,vllm]>=0.9.3",
    "matplotlib>=3.9.4",
    "notebook>=7.4.3",
    "numpy<2",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "scikit-network>=0.33.3",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "text2digits>=0.1.0",
    "tqdm>=4.67.1",
    "flash-attn>=2.8.2",
    "ezcolorlog>=1.0.3",
    "sh>=2.2.2",
    "ray[default]>=2.48.0",
    "pydantic>=2.10.6",
    "typing-extensions>=4.14.0",
    "flashinfer-python>=0.2.11.post1",
]

[tool.uv]
dev-dependencies = [
    "hf-transfer>=0.1.9",
    "huggingface-hub[hf-xet]>=0.33.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
no-build-isolation-package = ['flash-attn']

[tool.uv.sources]              # map each extra to its private index
llamafactory = { path = "src/external/LLaMA-Factory", editable = true }

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "TsT"

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
